I2V接口
